[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-checker"
version = "0.1.0"
description = "Crawl URLs to discover AWS, GCP, and Azure storage buckets"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Mauriceter" }
]
license = { text = "MIT" }

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
storage-checker = "storage_checker.storage_checker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["storage_checker*"]